<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/main_background"
    >

    <ImageView android:layout_height="wrap_content"
               android:layout_width="wrap_content"
               android:src="@drawable/ic_about"
               android:layout_gravity="right"
               android:layout_margin="@dimen/base_margin_left_right"
               android:id="@+id/imgAbout"
        >

    </ImageView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/track_cargo"
            android:layout_gravity="center"
            android:textColor="@color/border"
            />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/base_margin_left_right"
            android:layout_marginLeft="@dimen/base_margin_left_right"
            android:layout_marginBottom="@dimen/main_menu_button_top_bottom"
            android:layout_marginTop="@dimen/main_menu_button_top_bottom"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nova_posta"
                android:textSize="@dimen/main_menu_text_size"
                android:layout_gravity="center"
                android:textColor="@color/second_text_color"
                android:id="@+id/tvNovaPosta"
                />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/base_margin_left_right"
            android:layout_marginLeft="@dimen/base_margin_left_right"
            android:layout_marginBottom="@dimen/main_menu_button_top_bottom"
            android:layout_marginTop="@dimen/main_menu_button_top_bottom"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/in_time"
                android:textSize="@dimen/main_menu_text_size"
                android:layout_gravity="center"
                android:textColor="@color/second_text_color"
                android:id="@+id/tvInTime"
                />

        </FrameLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status_history"
        android:textSize="@dimen/base_text_size"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="@dimen/base_margin_left_right"
        android:textColor="@color/second_text_color"
        android:id="@+id/tvTtnHistory"
        />

</FrameLayout>

